--- a/prompt0.html
+++ b/prompt0.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        *{
+            margin: 0;  
+            padding: 0;
+            box-sizing: border-box;
+        }
         body {
             background: linear-gradient(rgba(5, 0, 0, 0.5), rgba(5, 0, 136, 0.5)), url('Images/AntwerpLib.jpg');
             /*background: linear-gradient(to bottom right,rgba(0, 0, 255, 0.478),magenta);*/
@@ -13,12 +18,11 @@
             background-size: cover;
             width: 100%;
             height: 100vh;
-            margin: 0;
-            padding: 0;
         }
         h2{
             color: #fff;
             font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            padding-top: 15px; padding-bottom: 15px;
         }
 
         .container {
@@ -55,38 +59,98 @@
         button:hover{
             background-color: black;
         }
-        .logo{
+        nav{
+            width: 100%;
+            display: flex;
+            /*background-color: black;
+           border: 2px solid blueviolet;*/
+            border-radius: 30px 5px 30 px 5 px;
+            justify-content: space-between;
+            align-items: center;
+            padding: 18px 8%;
+            font-family: "Lucida Console", "Courier New", monospace;
+        }
+        nav .logo{
             display: flex;
             align-items: center;
             font-size: 40px;
             font-weight: 600;
             font-family: "Lucida Console", "Courier New", monospace;
             color: #fff;
-            padding: 18px 8%;
         }
-        .logo #x{
+        nav .logo #x{
             font-size: 45px;
             color: blueviolet;
         }
-        .logo img{
+        nav .logo img{
             width: 60px;
             margin-right: 10px;
         }
         #r1 {
-            border-radius: 15px 50px 30px;
-            background: blueviolet;
-            padding: 2px;
-            width: 100px;
-            height: 100px;
-          }
+          border-radius: 15px 50px 30px;
+          background: blueviolet;
+          padding: 2px;
+          width: 100px;
+          height: 100px;
+        }
+        nav ul li{
+            display: inline-block;
+            list-style: none;
+            margin : 10px 20px;
+        }
+        nav ul li a{
+            text-decoration: none;
+            color: #fff;
+            position: relative;
+            font-weight: 500;
+        }
+        .btn3{
+            padding: 10px 25px;
+            border: 1px solid white;
+            border-radius: 5px;
+        }*
+        .btn3 a::after{
+            content: '';
+            width: 0%;
+            height: 3px;
+            position:absolute;
+            bottom:-5px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: #fff;
+            transition: width 0.3s;
+        }
+        .btn3 a:hover::after{
+            width: 50%;
+        }
+        .btn2 a{
+            border : 2px solid white;
+            padding: 10px 35px;
+            border-radius: 30px;
+            margin-right: 5px;
+            transition: background 0.5s;
+        }
+        .btn2 a:hover{
+            color: black;
+            background-color: white;
+        }
     </style>
 </head>
 
 <body>
-    <div class="logo">
-        <img id="r1" src="Images/Logo1.jpg" height="75">
-        <p> .le<span id="x">X</span>icon </p>
-    </div>
+    <nav>
+        <div class="logo">
+            <img id="r1" src="Images/Logo1.jpg" height="75">
+            <p> .le<span id="x">X</span>icon </p>
+        </div>
+        <ul>
+            <li class="btn3"><a href="">ABOUT</a></li>
+            <li class="btn3"><a href="">HOW IT WORKS</a></li>
+            <li class="btn3"><a href="">PRODUCTS</a></li>
+            <li class="btn2"><a href="">Login</a></li>
+            <li class="btn2"><a href="">Sign-up</a></li>
+        </ul>
+    </nav>
 
     <div class="container">
         <h2>Continue without Login</h2>
