--- a/prompt1.html
+++ b/prompt1.html
@@ -16,8 +16,10 @@
         <p> .le<span id="x">X</span>icon </p>
     </div>
 
+    <h3>This version might not work best for questions that need a code snippet to be generated,<br>don't worry, we'll be back with it ASAP :) </h3>
+
     <div class="QuizTime">
-        <h6>QuizTime!</h6>
+        <h1>QuizTime!</h1>
     </div>
 
     <input type="text" placeholder="What would you like to test yourself on?" id="topic">
